--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,7 +14,7 @@
     </fragment>
     <fragment
             android:id="@+id/addStationFragment" android:name="com.ktu.nearfuel.views.fragments.EditStationFragment"
-            android:label="@string/add_station"
+            android:label="@string/edit_station"
             tools:layout="@layout/edit_station_prices">
         <argument android:name="gasStation" app:argType="com.ktu.components.objects.GasStation" app:nullable="true"
                   android:defaultValue="@null"/>
