--- a/app/src/main/res/navigation/login_nav_graph.xml
+++ b/app/src/main/res/navigation/login_nav_graph.xml
@@ -3,7 +3,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/login_nav_graph" app:startDestination="@id/loginFragment">
 
-    <fragment android:id="@+id/loginFragment" android:name="com.ktu.nearfuel.views.fragments.LoginFragment"
+    <fragment android:id="@+id/loginFragment" android:name="com.ktu.nearfuel.login.views.LoginFragment"
               android:label="LoginFragment">
         <action android:id="@+id/action_loginFragment_to_signUpFragment" app:destination="@id/signUpFragment"/>
     </fragment>
